# exp-image-play-wains

./: LICENSE  README.md  exp-image-play-wains.cabal  interacting-wains.cabal
src/ALife/Creatur/Wain/Interaction/: Action.hs  Daemon.hs  ExamineAgent.hs  Experiment.hs  FMRI.hs  FMRIMain.hs  GeneratePopulation.hs  Image.hs  ImageDB.hs  ImageThinker.hs  ImageTweaker.hs  Photo.hs  Universe.hs  Wain.hs
test/: LearningTest.hs  Main.hs
test/ALife/Creatur/Wain/Interaction/: ActionQC.hs  ExperimentQC.hs  ImageQC.hs  TestUtils.hs
