name:                interacting-wains
version:             2.14
synopsis:            Agent for categorising images.
description:         ALife agent that works co-operatively with other
                     agents to develop a classification scheme for
                     images. This package replaces the creatur-realtra
                     package.
homepage:            https://github.com/mhwombat/interacting-wains
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) Amy de Buitléir 2013-2015
category:            Data
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/mhwombat/interacting-wains.git

source-repository this
  type:     git
  location: https://github.com/mhwombat/interacting-wains.git
  tag:      2.14

executable interaction-daemon
  main-is:          ALife/Creatur/Wain/Interaction/Daemon.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-wains ==7.6.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    hdaemonize ==0.5.*,
                    JuicyPixels ==3.2.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    text ==1.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable interaction-init
  main-is:          ALife/Creatur/Wain/Interaction/GeneratePopulation.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    cond ==0.4.*,
                    colour ==2.3.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-wains ==7.6.*,
                    diagrams-lib ==1.3.*,
                    diagrams-svg ==1.3.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    JuicyPixels ==3.2.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable interaction-examine
  main-is:          ALife/Creatur/Wain/Interaction/ExamineAgent.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-wains ==7.6.*,
                    diagrams-lib ==1.3.*,
                    diagrams-svg ==1.3.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    JuicyPixels ==3.2.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable interaction-fmri
  main-is:          ALife/Creatur/Wain/Interaction/FMRIMain.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-wains ==7.6.*,
                    diagrams-lib ==1.3.*,
                    diagrams-svg ==1.3.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    JuicyPixels ==3.2.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable interaction-photo
  main-is:          ALife/Creatur/Wain/Interaction/Photo.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-wains ==7.6.*,
                    diagrams-lib ==1.3.*,
                    diagrams-svg ==1.3.*,
                    directory ==1.2.*,
                    -- factory ==0.2.*,
                    filepath ==1.4.*,
                    JuicyPixels ==3.2.*,
                    lens ==4.12.*,
                    list-extras ==0.4.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

Test-suite interaction-tests
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  GHC-Options:      -Wall -fno-warn-orphans
  Hs-source-dirs:   test, src
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-wains ==7.6.*,
                    diagrams-lib ==1.3.*,
                    diagrams-svg ==1.3.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    JuicyPixels ==3.2.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    test-framework ==0.8.*,
                    test-framework-hunit ==0.3.*,
                    test-framework-quickcheck2 ==0.3.*,
                    transformers ==0.4.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    QuickCheck ==2.8.*
  Other-modules:    ALife.Creatur.Wain.Interaction.ImageQC,
                    ALife.Creatur.Wain.Interaction.ActionQC
                    ALife.Creatur.Wain.Interaction.TestUtils

executable interaction-learning-test
  main-is:          LearningTest.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-wains ==7.6.*,
                    diagrams-lib ==1.3.*,
                    diagrams-svg ==1.3.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    JuicyPixels ==3.2.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src, test
