name:                interacting-wains
version:             2.20
synopsis:            Agent for categorising images.
description:         ALife agent that works co-operatively with other
                     agents to develop a classification scheme for
                     images.
homepage:            https://github.com/mhwombat/interacting-wains
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) Amy de Buitléir 2013-2015
category:            Data
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/mhwombat/interacting-wains.git

source-repository this
  type:     git
  location: https://github.com/mhwombat/interacting-wains.git
  tag:      2.20

executable interaction-daemon
  main-is:          ALife/Creatur/Wain/Interaction/Daemon.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-image-wains ==1.0.*,
                    creatur-wains ==7.8.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    hdaemonize ==0.5.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    text ==1.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable interaction-init
  main-is:          ALife/Creatur/Wain/Interaction/GeneratePopulation.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    cond ==0.4.*,
                    colour ==2.3.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-image-wains ==1.0.*,
                    creatur-wains ==7.8.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable interaction-examine
  main-is:          ALife/Creatur/Wain/Interaction/ExamineAgent.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-image-wains ==1.0.*,
                    creatur-wains ==7.8.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

Test-suite interaction-tests
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  GHC-Options:      -Wall -fno-warn-orphans
  Hs-source-dirs:   test, src
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-image-wains ==1.0.*,
                    creatur-wains ==7.8.*,
                    creatur-wains-test-utils ==0.1.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    test-framework ==0.8.*,
                    test-framework-hunit ==0.3.*,
                    test-framework-quickcheck2 ==0.3.*,
                    transformers ==0.4.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    QuickCheck ==2.8.*
  Other-modules:    ALife.Creatur.Wain.Interaction.ActionQC

executable interaction-learning-test
  main-is:          LearningTest.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    base64-bytestring ==1.0.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-image-wains ==1.0.*,
                    creatur-wains ==7.8.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    lens ==4.12.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==8.2.*,
                    split ==0.2.*,
                    time ==1.5.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    utf8-string ==1.*,
                    vector ==0.10.*,
                    zlib ==0.6.*
  hs-source-dirs:   src, test
